push creation of the tree structure to the graph model, re #3201 TreeView now inherits from ListView, fix overflow issue

--- a/arches/app/media/css/arches.css
+++ b/arches/app/media/css/arches.css
@@ -10678,6 +10678,7 @@ ul.select2-choices:after {
 
 .left-panel {
     width: 270px;
+    overflow-y: auto;
 }
 
 .main-panel{
